# vcfcache

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  README.md  README2.md  RELEASE.md  TEST_SUMMARY.md  VARIANT_COUNT_ANALYSIS.md  WIKI.md  codecov.yml  debug_variant_counts.sh  public_caches.yaml  pyproject.toml  requirements.txt  requirements_parquet.txt  setup.py  vcfstash.py  vepstash.py
config/: nextflow.yml  nextflow_test.yml  vep_defaults.yml
docker/: Dockerfile  Dockerfile.annotated  Dockerfile.cache  Dockerfile.cache-hail  Dockerfile.vcfcache  Dockerfile.vcfstash  Dockerfile.vep115.2_basic  Dockerfile_tests  build-cache.sh  docker-compose.yml  run-vcfstash.sh
docs/: QUICK_START.md  QUICK_TEST_COMMANDS.md
scripts/: entrypoint.sh  release.sh  upload_dummy_cache.sh
src/: cache.py  cli.py
tests/: README.md  README_TESTING.md  conftest.py  run_benchmarks_gnomad.sh  run_benchmarks_subset.sh  test_annotate.py  test_annotation.py  test_annotation_structure.py  test_archive.py  test_blueprint.py  test_cache.py  test_cache_add.py  test_cache_annotate.py  test_cache_init.py  test_cli_alias_and_pull.py  test_cli_helpers_low_hanging.py  test_contig_mismatches.py  test_core.py  test_integration_annotation.py  test_manifest.py  test_preprocess_annotation.py  test_schemas.py  test_stash_annotate.py  test_stash_init.ipynb  test_validation.py  test_vanilla.py  test_zenodo_integration.py  test_zenodo_sandbox_integration.py  test_zenodo_unit.py  update_reference.py
tools/: bcftools  validate_vcf_ref.sh
vcfcache/: __init__.py  cli.py  compare.py  demo.py  (+2 more)
(+176 files in other folders)
